--- a/src/assets/font/Font.css
+++ b/src/assets/font/Font.css
@@ -13,19 +13,19 @@
 
 @font-face {
   font-family: '공체Bold';
-  src: url('../font/esamanru\ Bold.ttf') format('truetype');
+  src: url('../font/esamanruBold.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
 }
 @font-face {
   font-family: '공체Light';
-  src: url('../font/esamanru\ Light.ttf') format('truetype');
+  src: url('../font/esamanruLight.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
 }
 @font-face {
   font-family: '공체Medium';
-  src: url('../font/esamanru\ Medium.ttf') format('truetype');
+  src: url('../font/esamanruMedium.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
 }
