--- a/src/components/Modal/YourComponent.css
+++ b/src/components/Modal/YourComponent.css
@@ -26,7 +26,7 @@
   right: 0;
   margin: 0 auto;
   width: 390px;
-  height: 90%;
+  height: 650px;
   background: #fff;
   border-radius: 30px 30px 0 0;
   padding: 0 0 10px 0;
