--- a/src/components/Modal/YourComponent.css
+++ b/src/components/Modal/YourComponent.css
@@ -25,7 +25,7 @@
   left: 0;
   right: 0;
   margin: 0 auto;
-  width: 390px;
+  max-width: 390px;
   height: 650px;
   background: #fff;
   border-radius: 30px 30px 0 0;
